<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zeroone_creative.basicapplication.view.activity.TopActivity$PlaceholderFragment">


    <TextView
        android:id="@+id/top_textview_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/primary_text_inverse"
        android:textSize="@dimen/top_textview_textsize" />

    <ImageView
        android:id="@+id/top_imageview_lastpost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_spacing_normal"
        android:layout_weight="1"
        android:adjustViewBounds="false"
        android:scaleType="fitCenter" />

    <Button
        android:id="@+id/top_button_start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_button_height"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/pager_textview_label"
        android:text="@string/top_button_start" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_spacing_normal"
        android:orientation="horizontal">


        <Button
            android:id="@+id/top_button_gallery"
            android:layout_width="0dp"
            android:layout_height="@dimen/top_button_height"
            android:layout_weight="1"
            android:text="@string/top_button_gallery" />

        <Button
            android:id="@+id/top_button_all"
            android:layout_width="0dp"
            android:layout_height="@dimen/top_button_height"
            android:layout_weight="1"
            android:text="@string/top_button_other" />
    </LinearLayout>

</LinearLayout>
