<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zeroone_creative.basicapplication.view.activity.CommentAnswerActivity">

    <ImageView
        android:id="@+id/comment_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/element_spacing_large"
        android:adjustViewBounds="true"
        android:background="@drawable/bg_comment_image"
        android:cropToPadding="false"
        android:scaleType="fitCenter" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/comment_textview_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_answer_textview_orizinal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/accent"
            android:textSize="@dimen/headline_textview_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/comment_answer_textview_orizinal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:textStyle="normal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/headline_textview_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_answer_textview_answer"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/accent"
            android:textSize="@dimen/headline_textview_size" />

        <TextView
            android:id="@+id/comment_answer_textview_answer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:textStyle="normal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/headline_textview_size" />
    </LinearLayout>

    <Button
        android:id="@+id/comment_button_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/element_spacing_large"
        android:text="@string/comment_button_ok"
        style="@style/Widget.Custom.Button.Small" />

</LinearLayout>
